monitoring/configs/production/alertmanager-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
spec:
  tls:
    - hosts:
        - &host alertmanager.fanen.dk
  rules:
    - host: *host
