monitoring/configs/production/alloy-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy
spec:
  tls:
    - hosts:
        - &host alloy.fanen.dk
  rules:
    - host: *host
